apps/demo/monitoring/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: grafana
  namespace: monitoring
spec:
  gateways:
    - istio-admin-gateway/istio-admin-gateway
  hosts:
    - grafana.admin.dev.techbrewhq.com
  http:
    - match:
        - uri:
            prefix: "/"
      route:
        - destination:
            host: kube-prometheus-stack-grafana.monitoring.svc.cluster.local
            port:
              number: 80
